--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,60 @@
-* {
-  margin:0px;
-  padding:0px;
-}
+<body>
+<html>
+<title> Eileen-first-webstire</title>
+<LINK href= "style.css" rel="stylesheet"type=" text/css">
+</head>
+<body> 
+  <h1>Glabal Warming is Real</h1>
+ <th>By Eileen</th>
+    <th>Ertas</th>
+  <p>
+  <p> &#9829;</p> 
+ 
+    <img 
+         src= https://www.jagranjosh.com/imported/images/E/Articles/glonblwnmin.jpg
+         <table style="width:20%">
+ <img src="http://www.bookwormroom.com/wp-content/uploads/2013/01/Global-warming.jpg">
+    <img src= "https://www.bkconnection.com/system/refinery/blog/posts/thumbnails/000/001/951/post_detail/globalwarming.jpg?1425673439">
+   <img src="https://media2.s-nbcnews.com/j/newscms/2018_41/2597866/181009-german-power-plant-ew-946a_3a8cb6532a691d7ce04064d09c1dac80.fit-760w.jpg">
+         
+<h1 style="color:pink;">Table of world temp:</h1>
 
-#octocat {
-  display: block;
-  width:384px;
-  margin: 50px auto;
-}
+ <table style="width:50%">
+  <tr>
+    <th>Year </th>
+    <th>Temp </th>
+ 
+  </tr>
+  <tr>
+    <td>2013</td>
+    <td>0.64c</td>
+ 
+  </tr>
+  <tr>
+    <td>2014</td>
+    <td>0.73c</td>
+   </tr>
+   <tr>
+     <td>2015</td>
+     <td>0.86c</td>
+   </tr>
+   <tr>
+     <td>2016</td>
+     <td>0.98c</td>
+   </tr>
+   <tr>
+     <td>2017</td>
+     <td>0.9c</td>
+  </tr>
+</table>
+    <h1 style="font-family:cursive; font-size:150%;">The data shows that the world is getting warmer over the years because of an increase in carbon dioxide. The current warming trend is most likely  the result of human activity. Earth-orbiting satellites and other technological advances enable scientists to see the overall effects. The data, collected over a long amount of time, provides proof that the world is increasing in temperature.</h1>
 
-p {
-  display: block;
-  width: 400px;
-  margin: 50px auto;
-  font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
-}
+    <a href="https://climate.nasa.gov/vital-signs/global-temperature/">This is a link to the website i got the data from</a>
+
+
+  <form>
+  Do you blieve in global warming?:<br>
+  <input type="text" name="do you believe in global warming?"><br>
+ 
+</form>
+
